fix: Spacing of the formatting toolbar

--- a/source/common/less/theme-berlin/light.less
+++ b/source/common/less/theme-berlin/light.less
@@ -190,6 +190,10 @@ body {
       border: none;
       background-color: transparent;
 
+      .button-wrapper {
+        display: flex;
+      }
+
       button.formatting-toolbar-button {
         border: none;
         margin: 0;
